3.2.2

  * new: mobile theme;
  * new: -lang parameter;
  * enh: themes cleanups;
  * new: cmake and LuaJIT build (-DWITH_LUAJIT=1);
  * enh: autosave in emscripten build;
  * new: machine-translated English manual;
  * fix: ini method and load parameter;
  * fix: -appdata and system build;
  * fix: build with zlib;
  * fix: std.fmt and substitutions ($);
  * fix: segfault on restart;
  * fix: build with old gcc;

 -- Peter Kosyh <p.kosyh@gmail.com>  Sat, 14 Jul 2018 19:29:00 +0300

3.2.1

  * fix: save in lua 5.2 (proxy objects);
  * new: {$fmt ... } substitution;
  * fix: instead.set_sound() and snd.play();
  * fix: direct mode fix;
  * fix: bugs in documentation.
  * new: project moved to https://instead-hub.github.io

 -- Peter Kosyh <p.kosyh@gmail.com>  Sun, 22 Apr 2018 13:34:00 +0300

3.2.0

  * fix: segfault on path overflow fix;
  * fix: segfault in std.readdir fix;
  * fix: forever loop bug (unpaired {});
  * fix: theme.restore();
  * fix: fmt.anchor(), theme.snd.click(), push(), pop();
  * fix: snapshots module bugs;
  * fix: gamefile with main3.lua;
  * fix: noinv/nolife modules ('step' mod_call error);
  * fix: xact booleans parameters;
  * fix: chnage_pl with string argument;
  * fix: always = true in dialog phrase;
  * fix: use opengl on Windows instead d3d (nvidia fullscreen bug);
  * fix: win32 and path encoding problem;
  * fix: instead.menu();
  * fix: save declared functions in tables;
  * fix: sprite font:size with style;
  * enh: Android port improvements;
  * enh: click on bg not passed when xref selected (module click);
  * enh: documentation;
  * enh: speed improvements while theme updates;
  * enh: code cleanups;
  * new: walkback() in stdlib;
  * new: math.round;
  * new: std.var for variable extensions;
  * new: -renderer <opengl|direct3d|software|opengles|opengles2> parameter;
  * new: -nocursor parameter;
  * new: SailfishOS port;
  * new: WinRT patches for upcoming port;
  * new: sprite.scr() returns background in non direct mode;