@@ -188,10 +188,8 @@ cp -R instead-em/stead instead-em-js/fs/
 cp -R instead-em/themes instead-em-js/fs/
 cp -R instead-em/lang instead-em-js/fs/
 cp -R instead-em/games instead-em-js/fs/
+rm -rf instead-em-js/fs/games # without games
 find instead-em-js/fs/ \( -name '*.svg' -o -name Makefile -o -name CMakeLists.txt \) -exec rm {} \;
-cd instead-em-js
-ln -f -s ../instead-em/src/sdl-instead sdl-instead.bc
-ln -f -s ../lib lib
 
 cat <<EOF > post.js
 var Module;
@@ -261,6 +259,13 @@ Module['postRun'].push(function() {
 	req.send(null);
 });
 EOF
+
+unzip instead-em/contrib/instead-em.zip -j -d instead-em-js/
+
+cd instead-em-js
+ln -f -s ../instead-em/src/sdl-instead sdl-instead.bc
+ln -f -s ../lib lib
+
 
 emcc -O2 sdl-instead.bc lib/libz.a lib/libiconv.so lib/liblua.a lib/libSDL2_ttf.a  lib/libfreetype.a lib/libSDL2_mixer.a lib/libSDL2.a lib/libmikmod.a  lib/libSDL2_image.a lib/libjpeg.a  \
 -s EXPORTED_FUNCTIONS="['_instead_main']" \
